[gd_scene load_steps=9 format=3 uid="uid://fc4y1psnqpkl"]

[ext_resource type="Theme" uid="uid://buo32rgi3lfa" path="res://Resources/main_theme.tres" id="1_n46va"]
[ext_resource type="StyleBox" uid="uid://cgn71hrhqqblo" path="res://Resources/wood_panel_large_style_box.tres" id="2_7soov"]
[ext_resource type="Script" path="res://Settings/settings_popup.gd" id="2_iu0mg"]
[ext_resource type="Texture2D" uid="uid://iluqm77u0vwe" path="res://Settings/toggle_button_off.png" id="4_dw7ek"]
[ext_resource type="Texture2D" uid="uid://uhc7723mqy0m" path="res://Settings/speaker.svg" id="5_mnv3p"]
[ext_resource type="Texture2D" uid="uid://cltis3ugmb7ty" path="res://Settings/speaker-off.svg" id="6_r50s8"]
[ext_resource type="Texture2D" uid="uid://bk5qnrqa0ibbw" path="res://Settings/sound-on.svg" id="7_0h7ub"]
[ext_resource type="Texture2D" uid="uid://bqq4rlv15vss6" path="res://Settings/sound-off.svg" id="8_03k11"]

[node name="SettingsPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_n46va")
script = ExtResource("2_iu0mg")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -272.0
offset_top = -404.0
offset_right = 273.0
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_7soov")

[node name="Exit" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 471.0
offset_top = 17.0
offset_right = 521.0
offset_bottom = 92.0
focus_mode = 0
theme_override_font_sizes/font_size = 64
text = "X
"
flat = true

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "Settings"
horizontal_alignment = 1

[node name="Spacer" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Animations"

[node name="AnimationsToggle" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
toggle_mode = true
icon = ExtResource("4_dw7ek")
flat = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 96)
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="SFX" type="TextureButton" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
texture_normal = ExtResource("5_mnv3p")
texture_pressed = ExtResource("6_r50s8")
ignore_texture_size = true
stretch_mode = 5

[node name="Music" type="TextureButton" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
texture_normal = ExtResource("7_0h7ub")
texture_pressed = ExtResource("8_03k11")
ignore_texture_size = true
stretch_mode = 5

[node name="Spacer2" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64

[node name="ResetButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Reset Progress"

[connection signal="pressed" from="Panel/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/AnimationsToggle" to="." method="_on_animations_toggle_pressed"]
[connection signal="toggled" from="Panel/MarginContainer/VBoxContainer/HBoxContainer2/SFX" to="." method="_on_sfx_toggled"]
[connection signal="toggled" from="Panel/MarginContainer/VBoxContainer/HBoxContainer2/Music" to="." method="_on_music_toggled"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
